<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/first_signup_layout">
    <include layout="@layout/upper_bar_for_login"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/dumbell"
        android:layout_gravity="center"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <EditText
        android:id="@+id/nickname_place"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/bottom_grey"
        android:inputType="text"
        android:hint="@string/nickname"
        android:textColorHint="@color/hint_grey"
        android:textStyle="bold"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/id_place_in_signup"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/bottom_grey"
        android:inputType="text"
        android:hint="@string/login_id_hint"
        android:textColorHint="@color/hint_grey"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/password_place_in_signup"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/id_place"
        android:layout_alignLeft="@+id/id_place"
        android:background="@color/bottom_grey"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:hint="@string/login_password_hint"
        android:textColorHint="@color/hint_grey"
        android:textStyle="bold"
        android:gravity="center"/>
    <Button
        android:id="@+id/first_signup_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="bold"
        android:background="@drawable/round_square_purple"
        android:layout_marginTop="20dp"/>
    </LinearLayout>

</LinearLayout>