<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/upper_bar_for_login"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/dumbell"
        android:layout_gravity="center"
        android:scaleType="fitXY"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <EditText
            android:id="@+id/id_place"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/bottom_grey"
            android:inputType="text"
            android:hint="@string/login_id_hint"
            android:textColorHint="@color/hint_grey"
            android:gravity="center"
            android:layout_marginRight="20dp"
            />
        <EditText
            android:id="@+id/password_place"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/id_place"
            android:layout_alignLeft="@+id/id_place"
            android:background="@color/bottom_grey"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/login_password_hint"
            android:textColorHint="@color/hint_grey"
            android:gravity="center"


            />
        <Button
            android:id="@+id/login_button_in_login_page"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/id_place"
            android:layout_alignBottom="@+id/password_place"
            android:layout_alignTop="@+id/id_place"
            android:background="@drawable/round_square"
            />

    </RelativeLayout>
    <Button
        android:id="@+id/sign_up_btn_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_text_in_login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="transparent"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>


    <include layout="@layout/general_lower_bar"/>



</LinearLayout>