<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_weight"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:textSize="24sp" />

            <NumberPicker
                android:id="@+id/weight_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_height"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_below="@id/weight_picker"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textSize="24sp" />

            <NumberPicker
                android:id="@+id/height_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/height_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <Spinner
                android:id="@+id/purpose_spinner_change"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/height_picker"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/information_submit_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/purpose_spinner_change"
                android:background="@drawable/round_square_purple"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/on_change"
                />

        </RelativeLayout>
    </ScrollView>


</LinearLayout>